--- a/contacto.html
+++ b/contacto.html
@@ -17,10 +17,23 @@
     <hr>
     
     <div class="main-content">
-        <a href="../index.html" style="color: white; font-size: 18px;">Inicio&nbsp;&nbsp;&nbsp;&nbsp;</a> 
+        <a href="index.html" style="color: white; font-size: 18px;">Inicio&nbsp;&nbsp;&nbsp;&nbsp;</a> 
         <a href="obras/obras.html" style="color: white; font-size: 18px;">Obras &nbsp;&nbsp;&nbsp;&nbsp;</a>
-        <a href="../b&s.html" style="color: white; font-size: 18px;">Bio y Statement&nbsp;&nbsp;&nbsp;&nbsp;</a>
-        <a href="../contacto.html" style="color: white; font-size: 18px;">Contacto&nbsp;&nbsp;&nbsp;&nbsp;</a>
+        <a href="b&s.html" style="color: white; font-size: 18px;">Bio y Statement&nbsp;&nbsp;&nbsp;&nbsp;</a>
+        <a href="contacto.html" style="color: white; font-size: 18px;">Contacto&nbsp;&nbsp;&nbsp;&nbsp;</a>
+   
+        <p style="color: white;">
+        
+        cordoba - argentina
+        <br>
+        tel 3517153897
+        <br>
+        mail: vgigena7@gmail.com
+        <br>
+        youtube: valGigena
+        <br>
+        instaqgram :
+        </p>
     </div>
 </body>
 </html>
