--- a/obras/obras.html
+++ b/obras/obras.html
@@ -21,6 +21,15 @@
         <a href="obras/obras.html" style="color: white; font-size: 18px;">Obras &nbsp;&nbsp;&nbsp;&nbsp;</a>
         <a href="../b&s.html" style="color: white; font-size: 18px;">Bio y Statement&nbsp;&nbsp;&nbsp;&nbsp;</a>
         <a href="../contacto.html" style="color: white; font-size: 18px;">Contacto&nbsp;&nbsp;&nbsp;&nbsp;</a>
+        <br>
+        <br>
+        <img src="union.png" width="300">
+        <br>
+        <br>
+        <img src="ikebana.png" width="300">
+        <br>
+        <br>
+        <img src="dondeesta.png" width="300">
     </div>
 </body>
 </html>
