--- a/obras/obras.html
+++ b/obras/obras.html
@@ -31,6 +31,17 @@
                 </p>
             <hr>
 
+            <br>
+
+            <h2 style="color: white">"Sonido, Algo se mueve - 2022"</h1>
+                <img src="rysa.png" width="300"> &nbsp;&nbsp; <img src="sonido1.jpg" width="333">&nbsp;&nbsp; <img src="sonido2.jpg" width="300">
+                <br>
+                <h2 style="color: white; font-size: 15px;">  </h2>
+                <p style="color: white">Esto es producto de la investigación sobre las interfaces sonoras,  como estas afectan al cuerpo durante la improvisación o la interpretación y viceversa.
+ 
+                </p>
+            <hr>
+
             <h2 style="color: white">"Union(){ - 2022"</h1>
                 <img src="union.png" width="500"> &nbsp;&nbsp; <img src="union2.png" width="333">&nbsp;&nbsp; <img src="union3.png" width="600">
                 <br>
