--- a/obras/obras.html
+++ b/obras/obras.html
@@ -23,6 +23,8 @@
             <br>
             <br>
 
+            //RUINA
+
             <h2 style="color: white">"Ruina, Santa algoritmo - 2023"</h1>
                 <img src="rysa.png" width="300"> &nbsp;&nbsp; <img src="rysa1.png" width="333">&nbsp;&nbsp; <img src="rysa2.png" width="300">
                 <br>
@@ -33,8 +35,10 @@
 
             <br>
 
+            // ALGO SE MUEVE
+
             <h2 style="color: white">"Sonido, Algo se mueve - 2022"</h1>
-                <img src="rysa.png" width="300"> &nbsp;&nbsp; <img src="sonido1.jpg" width="333">&nbsp;&nbsp; <img src="sonido2.jpg" width="300">
+                <img src="sonido1.jpg" width="333">&nbsp;&nbsp; <img src="sonido2.jpg" width="300">
                 <br>
                 <h2 style="color: white; font-size: 15px;">  </h2>
                 <p style="color: white">Esto es producto de la investigación sobre las interfaces sonoras,  como estas afectan al cuerpo durante la improvisación o la interpretación y viceversa.
