--- a/b&s.html
+++ b/b&s.html
@@ -22,7 +22,7 @@
             <a href="contacto.html" class="menu-link">Contacto</a>
             
             <hr>
-            <img src="perfil.png" width="300">
+            <img src="perfil.jpg" width="300">
             <h1 style="color: white;">arte con el ruido y lo electrónico Improvisar el juego.</h1>
             <hr>
             <h2 style="color: white;">Bio</h2>
