--- a/b&s.html
+++ b/b&s.html
@@ -32,7 +32,29 @@
             <hr>
             <h2 style="color: white;">Statement</h2>
             <p style="color: white;">
-                Trabajo desde el experimento lúdico con aquella tecnología que puedo intervenir y reapropiarme, como pueden ser computadoras o videojuegos considerados obsoletos, software y hardware que permite libertades creativas a partir de la programación, la modularización o la construcción de nuevos objetos.​ Así explorar las particularidades de una variedad de técnicas como chiptune, paisaje sonoro, circuit bending, videojuegos, impresion 3d, modelado 3d, construcción de circuitos, programación, video arte, glitch, etc a la vez que se reivindican tareas manuales como la herrería, la carpintería, la costura o la serigrafía, esto me lleva a priorizar sus potencialidades inesperadas para luego trabajar en las relaciones -sean de tensión o articulación- entre unas y otras. Esta búsqueda ecléctica y voraz se materializa cuidadosamente, generando tensión entre lo mínimo de los gestos y la volatilidad de la experimentación. Me caracteriza la incertidumbre, y la impermanencia. Conceptos que contradicen las tendencias productivistas asociadas a las nuevas tecnologías. No intento generar espectacularidad en mis obras pero aún así percibo en les espectadores un asombro o un goce de la extrañeza a la hora de sumergirse en los mundos casi fantásticos aunque muy reales que estoy creando. Aunque me considero una persona politizada en mi obra no es evidentemente fácil rastrear temas de interés puntuales aunque de una u otra forma están siempre presentes.
+                Trabaj o desde el experimento lúdico con aquella
+tecnología que puedo intervenir y reapropiar,
+tanto en software o hardware que me permita
+libertades creativas. Disfruto de transitar los
+problemas técnicos que genera cada disciplina,
+más allá de la busqueda de un resultado
+puntual.
+Esto me lleva a explorar una gran variedad de
+técnicas como impresión y modelado 3 D, live
+coding, herrería, arte sonoro, programación,
+electrónica, fotografía, escultura, performance,
+etc.
+U tilizo desechos electrónicos y tecnologías de
+muy baj os recursos, por el aporte que brindan
+como material y por su plasticidad a la hora de
+la experimentación. Esta búsqueda ecléctica y
+voraz se materializa cuidadosamente, generando
+una tensión entre la sutileza de los gestos y la
+volatilidad de la experimentación.
+Busco formas de conservar, visibilizar y
+entender las lógicas de estos obj etos, su
+relación conmigo y su influencia en mi relación
+con el mundo
             </p>
         </div>
     </body>
