--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="main-content">
             <a href="index.html" class="menu-link"><b>Inicio</b></a> 
             <a href="obras/obras.html" class="menu-link">Obras </a>
-            <a href="b&s.html" class="menu-link">Sobre val</a>
+            <a href="b&s.html" class="menu-link">SobreVal</a>
             <a href="contacto.html" class="menu-link">Contacto</a>
             <br>
             <br>
